<resources>
    <string name="app_name">nursery</string>
    <string name="hint_name">name</string>
    <string name="rased">Your current balance :</string>
    <string name="charge">recharge the balance</string>
    <string name="Register_Tager">Register As tradesman</string>
    <string name="roaia">Our Vision</string>
    <string name="astbian">A questionnaire</string>
    <string name="roaiaa"> Providing children with a warm and safe environment and providing parents with their childs details to give them reassurance and comfort, and give children language and communication skills to express themselves and parents are able to follow them</string>

    <string name="hint_phone">mobile Or Email</string>
    <string name="whous">Who us</string>
    <string name="callus">Call us</string>
    <string name="details">You must transfer the amount to the previous account or pay when you buy. </string>
    <string name="myorders">My orders</string>
    <string name="ask">Are you sure you want to confirm and send this request?</string>
    <string name="addto">Add To Shopping Car</string>
    <string name="resala">Our Message</string>
    <string name="chargee">Charge</string>
    <string name="mobile">... Send a transfer receipt to WhatsApp: 971555733305 to complete your purchase</string>
    <string name="success">Your application registration has been successfully registered</string>
    <string name="load">Your request is being registered</string>
    <string name="lang">English</string>
    <string name="whoustxt">The nursery program is based on learning about nursery developments easily, and you can also see more information about the nursery application, technology that saves effort and time and increases the services provided by the nursery to children and their families, and provides parents with comprehensive and important information about their children and it can be used by downloading the special application Tags on smartphones. It is based on the number of children in the kindergarten </string>
    <string name="whoustxtt">Provide a program for parents to follow up on their children
Activating the use of modern technology inside and outside the kindergarten
The kindergarten provides a supportive environment for parents in follow-up
The kindergarten communicates with parents through effective social participation</string>
    <string name="name">name</string>
    <string name="address">Electricity meter number</string>
    <string name="phone">Phone</string>
    <string name="listorders">List Of Orders</string>
    <string name="confirm">Confirm</string>
    <string name="deletemontag">Delete Orders</string>
    <string name="login">Login</string>
    <string name="ignore">Skip</string>
    <string name="date">birth date </string>

    <string name="password">Password</string>
    <string name="allmoney">Cost</string>
    <string name="hint_address">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password </string>
    <string name="text_login">Login</string>
    <string name="text_register">Create account</string>
    <string name="text_not_member">Registration</string>
    <string name="re">Registration Supervisor</string>
    <string name="ree">Registration Lecturer </string>
    <string name="search">Search</string>
    <string name="terms">Terms and Conditions</string>
    <string name="orderdetail">Order Details</string>
    <string name="sh">
    Objective of the application:
1- Touring in an easy electronic environment that allows productive families and allows businesses to grow and prosper.
2 - Help as much as possible by maintaining the economic situation of productive families and help them by offering their products to reach the largest number of people.
3 - contribute to facilitate the sale process for merchants and purchase easily ..

terms of sale :
1- The contract must include two parties, namely the seller and the buyer.
2 - It is required that the seller owns the whole thing sold, until it is delivered to the buyer.
3 - It is required that the thing sold is halal, it is not permissible to trade in nullities.
4 - The price must be known between the parties, provided that the thing sold free of mortgages ..
5 - The seller should be very reasonable.
6. The seller must have a commercial license.

Purchase Terms:
1- Registration information must be correct and accurate in order to complete the purchase successfully.
2- Read the description of the product under the picture ..
3 - Some products do not recover or replace, such as perfumes, care products and open makeup and others ..
    </string>
    <string name="ss">
         Objective of the application:
1- Touring in an easy electronic environment that allows productive families and allows businesses to grow and prosper.
2 - Help as much as possible by maintaining the economic situation of productive families and help them by offering their products to reach the largest number of people.
3 - contribute to facilitate the sale process for merchants and purchase easily
         terms of sale :
1- The contract must include two parties, namely the seller and the buyer.
2 - It is required that the seller owns the whole thing sold, until it is delivered to the buyer.
3 - It is required that the thing sold is halal, it is not permissible to trade in nullities.
4 - The price must be known between the parties, provided that the thing sold free of mortgages
5 - The seller should be very reasonable.
6- The seller must have a commercial license.

    </string>
    <string-array name="account_num">
        <item>
            UAE
           </item>
        <!--<item>-->
        <!--السعودية-->
        <!--</item>-->
        <!--<item>-->
        <!--الكويت-->
        <!--</item>-->
        <!--<item>-->
        <!--عمان-->
        <!--</item>-->

    </string-array>
</resources>
