<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backa"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_gravity="center"
         android:layout_centerInParent="true"
        android:padding="10dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/sss"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"

            android:src="@drawable/log" />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang"
            android:id="@+id/swtch"
            />
        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape"
            android:weightSum="4"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutphone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="4"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/hint_phone"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:background="@drawable/shape"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"

                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonLogin"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"

            android:textColor="#000000"
            android:background="@drawable/shape2"
            android:text="@string/text_login" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/textViewLinkRegister"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/shape2"

            android:textColor="#000000"

            android:text="@string/text_not_member"
           />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonbb"
            android:layout_width="100dp"

            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:textColor="#ffffff"
            android:background="@drawable/shape3"
            android:text="@string/ignore" />

    </androidx.appcompat.widget.LinearLayoutCompat>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
</androidx.core.widget.NestedScrollView>