<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/uuu"

    android:layoutDirection="ltr">
    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:local="http://schemas.android.com/apk/res-auto"
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        local:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang"
            android:id="@+id/swtch"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_power_settings_new_black_24dp"
            android:id="@+id/logout"
            />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/app_name"

            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        android:layout_below="@+id/app_bar"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="5"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.25"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="3.25"
                    android:orientation="vertical"
                    >

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"


                        android:background="@drawable/shape"
                        android:layout_weight="3"
                        android:id="@+id/recyclerview2"
                        android:orientation="horizontal"
                        android:scrollbars="vertical"
                        android:layout_gravity="center"

                        android:layout_below="@+id/img"
                        android:layout_margin="5dp"
                        app:reverseLayout="true"
                        android:padding="5dp"
                        >

                    </androidx.recyclerview.widget.RecyclerView>
                </LinearLayout>
            </RelativeLayout>




            <androidx.recyclerview.widget.RecyclerView

                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/recyclerview"
                android:layout_gravity="center"
                android:layout_weight="3.25"
                android:padding="20dp"
                android:layout_below="@+id/vie"
                android:layout_marginBottom="2dp"
                app:reverseLayout="true"
                >

            </androidx.recyclerview.widget.RecyclerView>

              <RelativeLayout
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="0.5"

                  >
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_alignParentStart="true"
                     android:background="@drawable/shape2"
                     android:id="@+id/absence"
                     android:textStyle="bold"
                     android:textColor="#ffffff"
                     android:text="الخدمات"
                     android:layout_alignParentLeft="true" />
              </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:orientation="horizontal"
                android:background="@drawable/shape"
                android:layoutDirection="rtl"
                android:layout_weight="1"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_margin="2dp"
                    android:text="@string/whous"
                    android:id="@+id/whous"
                    android:textSize="13dp"
                    android:background="@drawable/shape2"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/callus"
                    android:text="@string/callus"
                    android:layout_margin="2dp"
                    android:textSize="13dp"
                    android:visibility="gone"
                    android:background="@drawable/shape2"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/shape2"
                    android:layout_margin="2dp"
                    android:textColor="#ffffff"
                    android:text="@string/resala"


                    android:textSize="13dp"
                    android:id="@+id/myorder"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/shape2"
                    android:layout_margin="2dp"
                    android:textColor="#ffffff"
                    android:text="@string/roaia"


                    android:textSize="13dp"
                    android:id="@+id/roaia"
                    android:textStyle="bold" />


            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar_subject"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="false"
        android:visibility="visible" />
</RelativeLayout>


